# tjost

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  test.yml
tests/: test_cli.py
tjost/: config.py  helpers.py  logging_manager.py  main.py
