[project]
description = "Easily manage virtual machine setups for test environments."
dynamic = ["version"]
name = "tjost"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.3.0",
    "gitpython>=3.1.45",
    "jsonschema>=4.25.1",
    "jsonschema-default>=1.8.1",
    "pyyaml>=6.0.3",
]

[project.urls]
Homepage = "https://github.com/chronicc/tjost"
Issues = "https://github.com/chronicc/tjost/issues"

[project.scripts]
tjost = "tjost.main:cli"

[project.optional-dependencies]
systemd = [
    "systemd-python>=235",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.2",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0"

[tool.coverage.report]
show_missing = true
skip_empty = true
